5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1671_1100.log
== TEST (2019-04-24 14:45:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = float(input("Qual o valor da cedula?: "))

print( "Entrada: " cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
	
-- ERROR:
File "XXXX", line 7
    print( "Entrada: " cedula )
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:47:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = float(input("Qual o valor da cedula?: "))

print( "Entrada: " cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
	
-- ERROR:
File "XXXX", line 7
    print( "Entrada: " cedula )
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:47:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = float(input("Qual o valor da cedula?: "))

print( "Entrada: ", cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
	
-- OUTPUT:
Entrada:  100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:52:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = float(input("Qual o valor da cedula?: "))

print( "Entrada: ", cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
elif ( cedula == 5):
	print( "Animal: Garca")
	
-- OUTPUT:
Entrada:  100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:54:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Qual o valor da cedula?: "))

print( "Entrada: ", cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
elif ( cedula == 5):
	print( "Animal: Garca" )
elif ( cedula == 10):
	print( "Animal: Arara" )
elif ( cedula == 20):
	print( "Animal: Mico-leao-dourado" )
elif ( cedula == 50):
	print( "Animal: Onca-pintada" )
elif ( cedula == 100):
	print( "Animal: Garoupa" )
	
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Qual o valor da cedula?: "))

print( "Entrada: ", cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
elif ( cedula == 5):
	print( "Animal: Garca" )
elif ( cedula == 10):
	print( "Animal: Arara" )
elif ( cedula == 20):
	print( "Animal: Mico-leao-dourado" )
elif ( cedula == 50):
	print( "Animal: Onca-pintada" )
elif ( cedula == 100):
	print( "Animal: Garoupa" )
else:
	print( "Animal: ivalido")
	
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:56:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Qual o valor da cedula?: "))

print( "Entrada: ", cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
elif ( cedula == 5):
	print( "Animal: Garca" )
elif ( cedula == 10):
	print( "Animal: Arara" )
elif ( cedula == 20):
	print( "Animal: Mico-leao-dourado" )
elif ( cedula == 50):
	print( "Animal: Onca-pintada" )
elif ( cedula == 100):
	print( "Animal: Garoupa" )
else:
	print( "Animal: ivalido")
	
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:56:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Qual o valor da cedula?: "))

print( "Entrada: ", cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
elif ( cedula == 5):
	print( "Animal: Garca" )
elif ( cedula == 10):
	print( "Animal: Arara" )
elif ( cedula == 20):
	print( "Animal: Mico-leao-dourado" )
elif ( cedula == 50):
	print( "Animal: Onca-pintada" )
elif ( cedula == 100):
	print( "Animal: Garoupa" )
else:
	print( "Animal: invalido")
	
-- EXECUTION TIME:
0.177149
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Qual o valor da cedula?: "))

print( "Entrada: ", cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
elif ( cedula == 5):
	print( "Animal: Garca" )
elif ( cedula == 10):
	print( "Animal: Arara" )
elif ( cedula == 20):
	print( "Animal: Mico-leao-dourado" )
elif ( cedula == 50):
	print( "Animal: Onca-pintada" )
elif ( cedula == 100):
	print( "Animal: Garoupa" )
else:
	print( "Animal: invalido")

-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Qual o valor da cedula?: "))

print( "Entrada: ", cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
elif ( cedula == 5):
	print( "Animal: Garca" )
elif ( cedula == 10):
	print( "Animal: Arara" )
elif ( cedula == 20):
	print( "Animal: Mico-leao-dourado" )
elif ( cedula == 50):
	print( "Animal: Onca-pintada" )
elif ( cedula == 100):
	print( "Animal: Garoupa" )
else:
	print( "Animal: invalido")

-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Qual o valor da cedula?: "))

print( "Entrada: ", cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
elif ( cedula == 5):
	print( "Animal: Garca" )
elif ( cedula == 10):
	print( "Animal: Arara" )
elif ( cedula == 20):
	print( "Animal: Mico-leao-dourado" )
elif ( cedula == 50):
	print( "Animal: Onca-pintada" )
elif ( cedula == 100):
	print( "Animal: Garoupa" )
else:
	print( "Animal: invalido")

-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:57:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Qual o valor da cedula?: "))

print( "Entrada: ", cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
elif ( cedula == 5):
	print( "Animal: Garca" )
elif ( cedula == 10):
	print( "Animal: Arara" )
elif ( cedula == 20):
	print( "Animal: Mico-leao-dourado" )
elif ( cedula == 50):
	print( "Animal: Onca-pintada" )
elif ( cedula == 100):
	print( "Animal: Garoupa" )
else:
	print( "Animal: Invalido")

-- EXECUTION TIME:
0.192421
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:59:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Qual o valor da cedula?: "))

print( "Entrada: ", cedula )

if( cedula == 2 ):
	print( "Animal: Tartaruga" )
elif ( cedula == 5):
	print( "Animal: Garca" )
elif ( cedula == 10):
	print( "Animal: Arara" )
elif ( cedula == 20):
	print( "Animal: Mico-leao-dourado" )
elif ( cedula == 50):
	print( "Animal: Onca-pintada" )
elif ( cedula == 100):
	print( "Animal: Garoupa" )
else:
	print( "Animal: Invalido")

-- EXECUTION TIME:
0.161094
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
